# nano-loopx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTOR_TASKS.md  README.md  README.zh-CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  architecture.md  attention-queue.md  authority-source-registration.md  benchmark-developer-workflow.md  codex-cli-long-run-benchmark-design.md  codex-cli-long-run-regression.md  codex-subagent-orchestration.md  complex-project-readonly-adapter.md  dashboard-frontend-selection.md  dreaming-exploration-lane.md  experiment-controller-milestone.md  extensions.md  field-derived-patterns.md  frontstage-channel-lease-roadmap.md  heartbeat-automation-prompt.md  integration.md  interaction-pattern-catalog.md  interface-budget-contract.md  lark-kanban-control-plane-adapter.md  new-project-codex-prompt.md  project-agent-todo-contract.md  public-private-boundary.md  quota-allocation.md  reward-gate-direct-write-contract.md  runtime-connector-catalog.md  session-runtime-control-plane-adapter.md  state-interaction-model.md  status-data-contract.md  worker-bridge-install-contract.md  xiaohongshu-launch-draft.md
examples/: active-state-interface-budget-smoke.py  active-state-structured-projection-smoke.py  active-user-assisted-pilot-append-cli-smoke.py  agent-diagnose-packet-smoke.py  agentissue-bench-codex-cli-runner-private-script-smoke.py  agentissue-bench-codex-cli-runner-publication-change-set-smoke.py  agentissue-bench-codex-cli-runner-real-result-smoke.py  agentissue-bench-lagent239-bridge-preflight-smoke.py  agentissue-bench-lagent239-code-source-sync-smoke.py  agentissue-bench-lagent239-controlled-pilot-result-smoke.py  agentissue-bench-lagent239-local-execution-gate-smoke.py  agentissue-bench-lagent239-patch-producer-smoke.py  agentissue-bench-lagent239-public-context-smoke.py  agents-last-exam-candidate-task-data-scan-smoke.py  agents-last-exam-host-codex-cli-route-smoke.py  agents-last-exam-local-docker-host-codex-route-smoke.py  agents-last-exam-local-dry-run-plan-smoke.py  agents-last-exam-local-exact-dry-run-result-smoke.py  agents-last-exam-local-launch-packet-smoke.py  agents-last-exam-local-preflight-smoke.py  agents-last-exam-local-runner-readiness-smoke.py  agents-last-exam-local-source-readiness-smoke.py  agents-last-exam-task-material-readiness-smoke.py  agents-last-exam-validation-run-gate-smoke.py  apex-agents-bridge-reducer-smoke.py  auto-research-demo-e2e-smoke.py  auto-research-demo-e2e-worker-loop-smoke.py  auto-research-demo-goal-isolation-smoke.py  auto-research-demo-supervisor-smoke.py  auto-research-evidence-writer-smoke.py  auto-research-knn-continuation-smoke.py  auto-research-knn-preset-start-smoke.py  auto-research-layered-e2e-acceptance-smoke.py  auto-research-live-evidence-capture-smoke.py  auto-research-minimal-kernel-smoke.py  auto-research-one-click-ux-smoke.py  auto-research-quickstart-smoke.py  auto-research-rollout-append-smoke.py  auto-research-rollout-readpath-smoke.py  auto-research-skill-contract-smoke.py  (+351 more)
extensions/loopx-finance-value-discovery/: README.md  pyproject.toml
goal_harness/: authority.py  benchmark.py  benchmark_case_state.py  benchmark_ledger.py  benchmark_trajectory.py  cli.py  codex_cli_probe.py  configure_goal.py  contract.py  demo.py  doctor.py  feedback.py  file_lock.py  frontstage.py  global_registry.py  heartbeat_prompt.py  history.py  project_map.py  project_prompt.py  quota.py  registry.py  review_packet.py  state_projection.py  state_refresh.py  status.py  status_server.py  terminal_bench_agent.py  todos.py  upgrade.py  worker_bridge.py
loopx/: __init__.py  agent_onboarding.py  agent_registry.py  benchmark_case_analysis.py  benchmark_case_state.py  cli.py  (+65 more)
(+916 files in other folders)
