[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "loopx"
version = "0.2.0"
description = "A lightweight Loop Engineering control plane for long-running agent goals."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "LoopX contributors" }]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "pytest-xdist>=3,<4",
  "ruff>=0.12,<1",
]

[project.scripts]
loopx = "loopx.cli:main"

[tool.setuptools.packages.find]
include = ["loopx*"]

[tool.setuptools.package-data]
"loopx.capabilities.auto_research" = ["worker_skill/SKILL.md"]
