[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "loopx-finance-value-discovery"
version = "0.2.0"
description = "Public-safe finance value-discovery extension for LoopX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["loopx>=0.2.9"]

[project.scripts]
loopx-finance-value-discovery = "loopx_finance_value_discovery.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
